fixed text wrapping in chat

--- a/src/main/client/peerlink/src/style.css
+++ b/src/main/client/peerlink/src/style.css
@@ -6,9 +6,7 @@
 }
 
 
-  p {
-    padding-left: 1.5%;
-  }
+  
 
   
 
